test_regress/t/t_semaphore_bad.out
%Error: t/t_semaphore_bad.v:12:13: Class method 'bad_method' not found in class 'semaphore'
                                 : ... note: In instance 't'
   12 |       if (s.bad_method() != 0) $stop;
      |             ^~~~~~~~~~
%Error: Exiting due to
